--- a/.github/workflows/py-test.yml
+++ b/.github/workflows/py-test.yml
@@ -11,6 +11,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: List files
+      run: ls -R
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
